--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "Movie Match"
 meta_title: "Movie Match - Find your movie match"
 meta_description: "You struggle to find the movie you're gonna see."
-meta_image: "camera-logo.png"                       # should exist in `app/assets/images/`
+meta_image: "home-copie.jpg"                       # should exist in `app/assets/images/`
